# hyperliquid-rust-sdk

./: .gitignore  Cargo.toml  LICENSE.md  README.md  ci.sh
.cargo/: config.toml
.github/workflows/: main.yml  master.yml
examples/: agent.rs  info.rs  market_maker.rs  order_and_cancel.rs  spot_transfer.rs  usdc_transfer.rs  ws_candles.rs  ws_notification.rs
src/: consts.rs  eip712.rs  errors.rs  exchange.rs  helpers.rs  lib.rs  main.rs  market_maker.rs  meta.rs  prelude.rs  proxy_digest.rs  req.rs  signature.rs  wallet.rs
src/exchange/: actions.rs  builder.rs  cancel.rs  dtos.rs  exchange_client.rs  exchange_responses.rs  mod.rs  modify.rs  order.rs  order_types.rs
src/info/: info_client.rs  info_impl.rs  info_structs.rs  mod.rs  open_order.rs  response_structs.rs  sub_structs.rs  user_state.rs
src/signature/: agent.rs  create_signature.rs  eip712.rs  mod.rs  usdc_transfer.rs
src/signer/: mod.rs
src/ws/: exchange_helper.rs  message_types.rs  mod.rs  post_structs.rs  responses.rs  sub_structs.rs  subscription_response_types.rs  tests.rs  ws_manager.rs  ws_post_client.rs
src/ws/robust/: mod.rs  stream.rs  subs.rs
tests/: user_fees_mainnet.rs
