[package]
name = "hyperliquid_rust_sdk"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
env_logger = "0.10.0"
alloy = { version = "0.11", features = ["dyn-abi", "sol-types", "signer-local"] }
# alloy-primitives = { version = "0.8.21", features = ["serde"] }
# alloy-sol-types = { version = "0.8.21", features = ["json"] }
# alloy-signer = { version = "0.11.1", features = ["eip712"] }
# alloy-signer-local = "0.11.1"
# alloy-dyn-abi = "0.8"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
futures-util = "0.3.28"
hex = "0.4.3"
http = "0.2.9"
lazy_static = "1.3"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.18"
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
rmp-serde = "1.0.0"
thiserror = "1.0.44"
tokio = {version = "1.29.1", features = ["full"]}
tokio-tungstenite = {version = "0.20.0", features = ["native-tls"]}
uuid = {version = "1.6.1", features = ["v4", "serde"]}
